Fixed grey bottom border to stretch across page on index

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -228,6 +228,7 @@ input {
         overflow: auto;
         padding: 10px 0;
         border-bottom: 1px solid $gray_lighter;
+        width: 100%;
     }
 }
 
